--- a/app/views/transaction_reconciliation/index.html.erb
+++ b/app/views/transaction_reconciliation/index.html.erb
@@ -13,6 +13,8 @@
 		 <%= label_tag(:l6, "trade_no:") %> <%= text_field_tag(:trade_no) %>
 		</br>
 		 <%= submit_tag("Search") %>
+
+	          	<%=button_tag("Clear",type: 'button',class: "button_clear_time") %>
 	</fieldset>
 <% end %>
 </div>
