--- a/app/assets/stylesheets/simulation.css.scss
+++ b/app/assets/stylesheets/simulation.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Simulation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#div_display_none{
+	display: none;
+}
+
+#simulation_table{
+	width:1100px
+}
+
+#simulation_table_tr_td{
+	width:50%
+}
