--- a/app/views/simulation/index_reconciliation.html.erb
+++ b/app/views/simulation/index_reconciliation.html.erb
@@ -5,6 +5,11 @@
 	<%= form_tag("/simulation/simulate_reconciliation", method: "post") do %>
 	         <%= label_tag(:label1, "please select payment system:") %> 
 	         <%= select_tag(:payment_system,options_for_select([["alipay_oversea","alipay_oversea"],["alipay_transaction","alipay_transaction"],["paypal","paypal"]],"alipay")) %>
+	         </br>
+	         START_TIME:<%= text_field_tag(:start_time,"#{Time.now.at_beginning_of_day.strftime('%Y-%m-%d')}") %>
+	         END_TIME:<%= text_field_tag(:end_time,"#{(Time.now.at_beginning_of_day+1.day).strftime('%Y-%m-%d')}") %>
+	         </br>
+	         PAGE_SIZE: <%= text_field_tag(:page_size,1) %>
 	          </br>  </br>
 	          <%= submit_tag("reconciliation") %>
 	<% end %>
