--- a/app/views/admin_manage/sign_in.html.erb
+++ b/app/views/admin_manage/sign_in.html.erb
@@ -1,9 +1,9 @@
-<% @page_title="ADMIN LOGIN" %>
+<% @page_title="登入界面" %>
 
 <div id="admin_login">
 	<%= form_for :admin,url: admin_manage_sign_in_path,method: :post do |f| %>
-		login_name: <%=f.text_field :admin_name %> </br></br>
-		login_passwd: <%=f.text_field :admin_passwd %> </br></br>
-		<%= f.submit %>
+		<%=label_tag :label1,"用户名:" %> <%=f.text_field :admin_name %> </br></br>
+		<%=label_tag :label2,"密码:" %> <%=f.password_field :admin_passwd_encryption %> </br></br>
+		<%= f.submit "登入",:class=>"login_button" %>
 	<% end %>
 </div>
