add rate_amount for alipay_oversea

--- a/app/views/transaction_reconciliation/index.html.erb
+++ b/app/views/transaction_reconciliation/index.html.erb
@@ -13,6 +13,7 @@
 		 </br>
 		 <%= label_tag(:l4, "交易开始时间:") %> <%= datetime_field_tag(:start_time) %>
 		 <%= label_tag(:l5, "交易结束时间:") %> <%= datetime_field_tag(:end_time) %>
+		 <%= label_tag(:l6, "订单号:") %> <%= datetime_field_tag(:transactionid) %>
 		</br>
 		 <%= submit_tag("查询") %>
 
