--- a/app/views/transaction_reconciliation/_index.html.erb
+++ b/app/views/transaction_reconciliation/_index.html.erb
@@ -8,9 +8,9 @@
 	<td> 
 		<% unless reconciliation_detail.online_pay_id.blank? %> 
 			<%= link_to reconciliation_detail.online_pay.trade_no,show_single_online_pay_path(reconciliation_detail.online_pay_id) %>
-		<% else %>
-			UNMATCH
+			</br>
 		<% end %>
+		<%= reconciliation_detail.reconciliation_describe %>
 	</td>
 	<td>  <%= reconciliation_detail.timestamp %>  </td>
 </tr>
