--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 					</br>
 					<%=link_to t('财务对账'),transaction_reconciliation_index_path,method: :get%>
 					</br>
+					<%=link_to t('财务汇总'),transaction_reconciliation_report_path,method: :post%>
+					</br>
 					<%=link_to t('文件上传'),upload_file_index_path,method: :get%>
 				</div>
 			<% end %>
